End of section 19

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -1,12 +1,19 @@
 {
-  "ConnectionStrings" : {
-    "DefaultConnection": "Data source=datingapp.db"
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost; Port=5432; User Id=appuser; Password=Pa$$w0rd; Database=datingapp"  },
+  
+  "TokenKey":"Super secret unguessable key",
+  
+  "CloudinarySettings": {
+    "CloudName": "dii6yftzn",
+    "ApiKey": "139942453674115",
+    "ApiSecret": "xY_Dr5v44H6x8wB45wjDeNcE6Fw"
   },
-  "TokenKey": "super secret unguessable key",
-  "Logging": {
+
+  "Logging":{
     "LogLevel": {
       "Default": "Information",
-      "Microsoft": "Information",
+      "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
   }
